<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="@drawable/background750x1000">

    <ImageButton
        android:id="@+id/settings_btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/settings_back"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/form"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/settings"
                android:textColor="@color/title"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/settings_ETServerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_server_address"
                android:textColor="@color/text"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                android:autofillHints="" />

            <Button
                android:id="@+id/settings_btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_submit"
                android:textColor="@color/btn_text"
                android:backgroundTint="@color/btn"
                />

            <RadioGroup
                android:id="@+id/idRGgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/settings_RBLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/light"
                    android:textColor="@color/text" />

                <RadioButton
                    android:id="@+id/settings_RBDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/dark"
                    android:textColor="@color/text" />

            </RadioGroup>

            <Button
                android:id="@+id/settings_btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/logout"
                android:textColor="@color/top_bar_text"
                android:text="@string/settings_logout" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>