<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background750x1000"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/loginBtnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="settings"
            android:minWidth="64dp"
            android:minHeight="40dp"
            android:src="@drawable/ic_settings" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="4"
            android:gravity="center"
            app:cardBackgroundColor="@color/form_background"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                app:cardBackgroundColor="@color/form"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">


                        <TextView
                            android:id="@+id/login_loginText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="30dp"
                            android:gravity="center"
                            android:text="@string/login_loginText"
                            android:textColor="@color/title"
                            android:textSize="30sp" />

                        <EditText
                            android:id="@+id/loginEtUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/register_username"
                            android:textColorHint="@color/hint"
                            android:textColor="@color/text"
                            android:inputType="text" />

                        <EditText
                            android:id="@+id/loginEtPw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/register_password"
                            android:textColorHint="@color/hint"
                            android:textColor="@color/text"
                            android:inputType="textPassword" />

                        <Button
                            android:id="@+id/login_btnSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/login_submit"
                            android:textSize="18sp"
                            android:textColor="@color/btn_text"
                            android:backgroundTint="@color/btn"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="3dp"
                                android:paddingEnd="3dp"
                                android:text="@string/login_existsText"
                                android:textColor="@color/text"/>

                            <TextView
                                android:id="@+id/login_to_register"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/login_registerText"
                                android:textColor="@color/link" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="@color/icons_background"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:text="@string/register_available_on"
                    android:textColor="@color/available_on_text"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_android" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_windows" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_web" />


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>